# analog-instrument-eval

./: README.md  pyproject.toml
environments/analog_instrument/: README.md  __init__.py  analog_instrument.py  pyproject.toml  test_rubric.py
environments/analog_instrument/.prime/: .env-metadata.json
environments/analog_instrument/data/: manifest.json
environments/analog_instrument/data/ground_truth/: barometer_001.json  barometer_002.json  clock_001.json  clock_002.json  clock_003.json  clock_004.json  clock_005.json  clock_006.json  clock_007.json  clock_008.json  clock_009.json  clock_010.json  clock_011.json  clock_012.json  clock_013.json  clock_014.json  clock_015.json  clock_016.json  hygrometer_001.json  pressure_gauge_001.json  pressure_gauge_002.json  scale_001.json  scale_002.json  speedometer_001.json  speedometer_002.json  speedometer_003.json  sphygmomanometer_001.json  sphygmomanometer_002.json  tachometer_001.json  tachometer_002.json
environments/analog_instrument/data/images/personal/: README.md  _template.json
results/: CALIBRATION_ANALYSIS.md  CROSS_MODEL.md  REPORT.md  SOURCING_METHODOLOGY.md  eval_full.json  raw_samples_opus.json
scripts/: build_dataset.py  candidates_v02.json  fetch_categories.py  fetch_v02.py  rebuild_manifest.py  run_eval.py  verified_v02.json
