[project]
name = "analog_instrument"
description = "Read analog instruments (clocks, gauges, scales) from real photos. Deterministic rubric, tight tolerance bands, verified ground truth."
tags = ["vision", "analog", "instruments", "clocks", "gauges", "real-data", "frontier-failure"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "datasets",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "analog_instrument.py",
    "test_rubric.py",
    "pyproject.toml",
    "data/**/*",
    "README.md",
]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 8
